--- a/readme.adoc
+++ b/readme.adoc
@@ -1,6 +1,15 @@
 = Plutus Pioneers Playground
 
-This repository contains our experiments while following the plutus pioneer program, currently in the third cohort.
+This repository contains our notes and experiments while following the plutus pioneer program, currently in the third cohort.
+
+The idea is to have a group of study related to Cardano After Dark, such that we can collaborate, experiment and write documents together in an async fashion. 
+
+Continue to 
+
+* link:course_material[]
+* ink:experiments[]
+
+== Note
 
 This readme is written with https://docs.asciidoctor.org/asciidoc/latest/syntax-quick-reference/[asciidoc], which can also coexist with https://www.markdownguide.org/cheat-sheet/[markdown] documents.
 
